Fix milestone date text alignment

--- a/adam-swanson-site/src/cards.scss
+++ b/adam-swanson-site/src/cards.scss
@@ -173,7 +173,7 @@
         font-size: 2rem;
         font-weight: 400;
 
-        @media screen and (min-width: $desktop) {
+        @media screen and (min-width: $desktop-lg) {
           text-align: right;
         }
       }
